# sparse_convo

./: .clang_complete  CMakeLists.txt  CMaxTable.lua  build_network.lua  data_loader.lua  trainer.lua  utils.lua
cuda/: SparseFilterConvolution.cu  init.cu
lua/: SparseFilterConvo.lua  init.lua
rocks/: sparseconvo-scm-1.rockspec
src/: SparseFilterConvolution.cpp  SparseFilterConvolution.cu  SparseFilterConvolution_cpp_impl.cpp  SparseFilterConvolution_cpp_impl.h  SparseFilterConvolution_cpu_impl.cpp  SparseFilterConvolution_cu_impl.cu  SparseFilterConvolution_cu_impl.cuh  init.cu
test/: fprop.lua  test_util.lua  time_trial.lua
