CMAKE_MINIMUM_REQUIRED(VERSION 2.8 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(CUDA 4.0 REQUIRED)
FIND_PACKAGE(OpenMP)

LIST(APPEND CMAKE_CXX_FLAGS "-std=c++11")
LIST(APPEND CUDA_NVCC_FLAGS "-arch=sm_30" "-std=c++11")

INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC" "src")
LINK_DIRECTORIES("${Torch_INSTALL_LIB}")

SET(src-sparseconvo src/init.cu)

FILE(GLOB luasrc lua/*.lua)

CUDA_ADD_LIBRARY(sparseconvo MODULE ${src-sparseconvo})
TARGET_LINK_LIBRARIES(sparseconvo luaT THC TH)

SET_TARGET_PROPERTIES(sparseconvo PROPERTIES
    PREFIX "lib"
    IMPORT_PREFIX "lib")

INSTALL(TARGETS sparseconvo
    RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
    LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")

INSTALL(
    FILES
    ${luasrc}
    DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/sparseconvo")
